[project]
name = "llm-cache-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "openai==1.58.1",
    "pydantic==2.6.4",
    "python-dotenv==1.0.0",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
